# tambo360

./: app.py  backup2.py  database-commented.py  database.py  exporters.py  migrate_data.py  pyproject.toml  requirements.txt  utils.py  visualizations.py
.streamlit/: config.toml
attached_assets/: Pasted--Entiendo-perfecto-Julius-Quer-s-un-prompt-detallado-para-Replit-o-cualquier-IA-que-diga--1745842191249.txt  Pasted-Tengo-una-app-de-recolecci-n-de-datos-en-tambos-establecimientos-lecheros-desarrollada-en-Streamli-1745842166795.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1745852424493.txt
data/: datos_generales.csv  fertilizacion.csv  fieldlens.db  proteccion_cultivos.csv  superficies_insumos.csv
sections/: a.py  dashboard.py  datos_generales.py  draw.py  efluentes.py  energia.py  fertilizacion.py  home.py  ju7lius18mayo.py  manejo_recursos.py  proteccion_cultivos.py  rebano.py  resumen_rebano.py  riego.py  superficies_insumos.py  transporte.py
sections/mierdas/: datos_generales-old.py
