[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "exporters>=0.7.0",
    "pandas>=2.2.3",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.44.1",
    "xlsxwriter>=3.2.3",
    "plotly>=6.0.1",
    "docx>=0.2.4",
]
